--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -263,6 +263,11 @@
 
 Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
+  <data name="scaleDerivativeBA" xml:space="preserve">
+    <value>Большой звон в сеточной структуре, контрастно, но чёткие края
+
+Очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
   <data name="ScaleFactor" xml:space="preserve">
     <value>Укажите масштаб увеличения (2x-128x)</value>
   </data>
@@ -294,6 +299,11 @@
     <value>Очень гладко, после обратной корректировки - наиболее точно для любых сцен, но очень сильно размыто и контрастно и сеточная структура видна в некоторых местах
 
 Медленно, но Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
+  </data>
+  <data name="GPTsolution" xml:space="preserve">
+    <value>Гладко, чётко, немного контрастно и видна сеточная структура, но точно даже без обратной корректировки
+
+Быстро, и Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
   <data name="SecSpent" xml:space="preserve">
     <value>секунд прошло</value>
