--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -184,4 +184,10 @@
   <data name="shortThin255BA" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shortThin255BA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortGPT" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortGPT.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortDerivativeBA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortDerivativeBA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
