--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -300,10 +300,15 @@
 
 Медленно, но Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
-  <data name="GPTsolution" xml:space="preserve">
+  <data name="SmoothCAS" xml:space="preserve">
     <value>Гладко, чётко, немного контрастно и видна сеточная структура, но точно даже без обратной корректировки
 
 Быстро, и Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
+  </data>
+  <data name="AntiBicubic" xml:space="preserve">
+    <value>Резко и отсутствует сеточная структура, но немного шумно и может присутствовать гало
+
+Медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="SecSpent" xml:space="preserve">
     <value>секунд прошло</value>
