--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -190,4 +190,7 @@
   <data name="shortDerivativeBA" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shortDerivativeBA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortAntiBicubic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortAntiBicubic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
