--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -275,6 +275,11 @@
     <value>Потрясающе детализированный результат, но только, если результат должен быть монохромным (только чистый чёрный и белый, или для цветных изображений - чистые красный, чёрный, зелёный, жёлтый, фуксия, синий, голубой и белый)
 Очень медленно - очень очень медленно, но Вы можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
   </data>
+  <data name="scaleFNN" xml:space="preserve">
+    <value>Только сеточная структура
+
+Самый быстрый метод, но Вы не можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
+  </data>
   <data name="scaleRough" xml:space="preserve">
     <value>Стилизация под микротипографику, но если результат должен быть монохромным это даёт приемлемый результат
 
@@ -327,9 +332,9 @@
     <value>Попробовать ускорить процесс за счёт видеокарты? 
 (Это может прервать другие несистемные процессы на видеокарте или наоборот уменьшить скорость, результаты обычной версии и для видеокарты могут немного отличаться, версия для видеокарты может иногда вылетать)
 
-Квадрат - Aвтовыбор
-Галочка - Всегда
-Пусто - Никогда</value>
+Квадрат - Aвтовыбор для снижения времени ожидания и уменьшения вылетов
+Галочка - Использовать видеокарту
+Пусто - Использовать процессор</value>
   </data>
   <data name="Wait" xml:space="preserve">
     <value>Обработка...                         %</value>
