--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -126,7 +126,7 @@
   <data name="boldScale" xml:space="preserve">
     <value>Сеточная структура, немного шумно и контрастно (для точности обратная корректировка рекомендуется) и слишком маленькие детали могут потеряться
 
-Очень быстро - Очень очень медленно, но Вы можете обрабатывать несколько изображений одновременно без существенной потери скорости</value>
+Очень быстро - нормально, но Вы можете обрабатывать несколько изображений одновременно без существенной потери скорости</value>
   </data>
   <data name="Close" xml:space="preserve">
     <value>Закрыть программу и отменить обработку
@@ -141,7 +141,7 @@
   <data name="contrastBoldScale" xml:space="preserve">
     <value>Прекрасный результат, но чересчур контрастно (для точности обратная корректировка обязательна) и слишком маленькие детали могут потеряться
 
-Очень быстро - Очень очень медленно, но Вы можете обрабатывать несколько изображений одновременно без существенной потери скорости</value>
+Очень быстро - нормально, но Вы можете обрабатывать несколько изображений одновременно без существенной потери скорости</value>
   </data>
   <data name="CopyStopwatch" xml:space="preserve">
     <value>Средняя кнопка мыши (клик на колесико) для копирования значения секундомера</value>
@@ -226,94 +226,94 @@
   <data name="scaleBAContrast" xml:space="preserve">
     <value>Видна сеточная структура, немного контрастно и может присутствовать звон
 
-Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - нормально, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scale255BA" xml:space="preserve">
     <value>Расплывчато, но не размыто, возможно будет нужна обратная корректировка
 
-Очень очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - экстремально медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleThin255BA" xml:space="preserve">
     <value>Утоньшает объекты и делает их красочнее
 
-Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - Экстремально медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleBASmoothContrast" xml:space="preserve">
     <value>Контрастно и может быть видна сеточная структура
 
-Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - нормально, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleBAExtremum" xml:space="preserve">
     <value>Чёткие края, но контрастно (для точности необходима обратная корректировка) и присутствует большой звон
 
-Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - Экстремально медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleBAmonochrome" xml:space="preserve">
     <value>Гладкий, криволинейный и в то же время чёткий результат, но монохромный (вследствие чего цвета могут искажаться)
 
-Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - нормально, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleBAmonochrome2" xml:space="preserve">
     <value>Чёткие границы, но цвета могут искажаться
 
-Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - нормально, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleBilinearApproximation" xml:space="preserve">
     <value>Чётко видна сеточная структура и может присутствовать звон, но это лучше, чем ближайший сосед
 
-Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - нормально, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleDerivativeBA" xml:space="preserve">
     <value>Большой звон в сеточной структуре, контрастно, но чёткие края
 
-Очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Очень быстро - экстремально медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="ScaleFactor" xml:space="preserve">
     <value>Укажите масштаб увеличения (2x-128x)</value>
   </data>
   <data name="scaleFurry" xml:space="preserve">
     <value>Потрясающе детализированный результат, но только, если результат должен быть монохромным (только чистый чёрный и белый, или для цветных изображений - чистые красный, чёрный, зелёный, жёлтый, фуксия, синий, голубой и белый)
-Очень медленно - очень очень медленно, но Вы можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
+Очень быстро - экстремально медленно, но Вы можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
   </data>
   <data name="scaleFNN" xml:space="preserve">
-    <value>Только сеточная структура
+    <value>Только сеточная структура, но самый быстрый в мире метод
 
-Самый быстрый метод, но Вы не можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
+Невероятно быстро - очень быстро, но Вы не можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
   </data>
   <data name="scaleRough" xml:space="preserve">
     <value>Стилизация под микротипографику, но если результат должен быть монохромным это даёт приемлемый результат
 
-Очень медленно, но Вы можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
+Очень быстро - медленно, но Вы можете обрабатывать несколько изображений одновременно без большой потери скорости</value>
   </data>
   <data name="scaleSeparate" xml:space="preserve">
     <value>Даёт прекрасный, но почти монохромный результат и присутствует звон (чтобы избежать этого попробуйте несколько раз прогнать через масштаб x2-x4)
 
-Очень очень быстро - Очень быстро, но Вы не можете обрабатывать одновременно несколько изображений без потери скорости</value>
+Невероятно быстро - быстро, но Вы не можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
   <data name="ScaleSmooth" xml:space="preserve">
     <value>Наиболее точно для сцен, где объекты полностью в кадре, но немного размыто (намного меньше, чем у любой интерполяции) и видна сеточная структура
 
-Очень быстро - медленно, но Вы не можете обрабатывать одновременно несколько изображений без потери скорости</value>
+Невероятно быстро - быстро, и Вы  можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
   <data name="scaleSmoothContinuous" xml:space="preserve">
     <value>Наиболее точно для сцен, где объекты продолжаются за кадром, но немного размыто (намного меньше, чем у любой интерполяции) и видна сеточная структура
 
-Очень быстро - медленно, но Вы не можете обрабатывать одновременно несколько изображений без потери скорости</value>
+Невероятно быстро - быстро, и Вы  можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
   <data name="ScaleSmoothContrast" xml:space="preserve">
     <value>Очень гладко, после обратной корректировки - наиболее точно для любых сцен, но очень сильно размыто и контрастно и сеточная структура видна в некоторых местах
 
-Медленно, но Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
+Невероятно быстро - нормально, но Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
   <data name="SmoothCAS" xml:space="preserve">
     <value>Гладко, чётко, немного контрастно и видна сеточная структура, но точно даже без обратной корректировки
 
-Быстро, и Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
+Очень быстро - нормально, и Вы можете обрабатывать одновременно несколько изображений без потери скорости</value>
   </data>
   <data name="AntiBicubic" xml:space="preserve">
     <value>Резко и отсутствует сеточная структура, но немного шумно и может присутствовать гало
 
-Медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+Невероятно быстро - быстро, но Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="SecSpent" xml:space="preserve">
     <value>секунд прошло</value>
